Markdown to Jinja2 support for research projects

--- a/website/research/templates/projects/TEMPLATE.j2
+++ b/website/research/templates/projects/TEMPLATE.j2
@@ -1,11 +1,13 @@
-<a class="image"><img src="{{ url_for('static', filename='images/....png') }}" alt="..." /></a>
-<h2 class='h3'>Project name</h2>
-<h3 class='h4'>Advisor: Project advisor(s)</h3>
-<h3 class='h4'>Student: Student(s) working on the project</h3>
-<h4 class='h5'>Major: Student(s) major(s)</h4>
-<p>Project description/abstract</p>
-<!-- delete this line to add a button
-<ul class="actions">
-<li><a href="#" class="button">More</a></li>
-</ul>
-delete this line to add a button -->
+<a class='image'><img src="{{ url_for('static', filename='images/...') }}" alt="..."></a>
+<h2 class='h3'>...</h2>
+<h3 class='h4'>Advisor: ...</h3>
+<h3 class='h4'>Student: ...</h3>
+<h4 class='h5'>Major: <!-- Add project student(s) major(s) here --></h4>
+<!-- Add project description/abstract here 
+
+    NOTE: markdown syntax to create a link is [alt text](url)
+
+-->
+
+<p>...</p>
+<ul class='actions'><li><a href="..." class="button">...</a></li></ul>
