--- a/website/research/templates/projects/anti_ramsey_multiplicities.j2
+++ b/website/research/templates/projects/anti_ramsey_multiplicities.j2
@@ -1,29 +1,7 @@
-<article>
-    <a class="image"><img src="{{ url_for('static', filename='images/ramsey.jpg') }}"
-            alt="Abstract pattern created by various colors of string." /></a>
-    <h3>Anti-Ramsey Multiplicities</h3>
-    <h4>Co-advisors: <a href="https://www.sites.google.com/view/michaeltait" target="_blank"
-            rel="noreferrer noopener external" alt="(opens in new tab)">Dr. Michael Tait</a> & <a
-            href="https://orion.math.iastate.edu/myoung/" target="_blank" rel="noreferrer noopener external"
-            alt="(opens in new tab)">Dr. Michael Young</a><br />
-        Students: <a href="https://www.linkedin.com/in/xiang-si/" target="_blank" rel="noreferrer noopener external"
-            alt="(opens in new tab)">Xiang Si</a>, <a href="https://www.linkedin.com/in/yunustuncbilek/" target="_blank"
-            rel="noreferrer noopener external" alt="(opens in new tab)">Yunus Tun&ccedil;bilek</a>, & <a
-            href="https://www.linkedin.com/in/ruifan-yang/" target="_blank" rel="noreferrer noopener external"
-            alt="(opens in new tab)">Ruifan Yang</a></h4>
-    <p>The Ramsey multiplicity constant of a graph <i>H</i> is the minimum proportion of copies of <i>H</i> in
-        the complete graph which are monochromatic under an edge-coloring of the complete graph on <i>n</i>
-        vertices as <i>n</i> goes to infinity. A graph <i>H</i> is called <i>r</i>-anti-common if the maximum
-        proportion of rainbow copies of <i>H</i> in any <i>r</i>-coloring of the edges of the complete graph on
-        <i>n</i> vertices is asymptotically achieved by taking a random coloring. We disproved the conjecture
-        that all bipartite graphs are anti-common.
-    </p>
-    <p>This research was done at the Carnegie Mellon University Summer Undergraduate Applied Mathematics
-        Institute (<a href="https://www.cmu.edu/math/undergrad/suami/home/index.html" target="_blank"
-            rel="noreferrer noopener external" alt="(opens in new tab)">SUAMI</a>).</p>
-    <ul class="actions">
-        <li><a href="https://ajc.maths.uq.edu.au/pdf/73/ajc_v73_p357.pdf" target="_blank"
-                rel="noreferrer noopener external" alt="(opens PDF File in new tab)" class="button">PAPER</a>
-        </li>
-    </ul>
-</article>
+<a class='image'><img src="{{ url_for('static', filename='images/ramsey.jpg') }}" alt="Abstract pattern created by various colors of string."></a>
+<h2 class='h3'>Anti-Ramsey Multiplicities</h2>
+<h3 class='h4'>Advisor: <a href="https://www.sites.google.com/view/michaeltait">Dr. Michael Tait</a> &amp; <a href="https://orion.math.iastate.edu/myoung/">Dr. Michael Young</a></h3>
+<h3 class='h4'>Student: <a href="https://www.linkedin.com/in/xiang-si/">Xiang Si</a>, <a href="https://www.linkedin.com/in/yunustuncbilek/">Yunus Tun&ccedil;bilek</a>, &amp; <a href="https://www.linkedin.com/in/ruifan-yang/">Ruifan Yang</a></h3>
+<p>The Ramsey multiplicity constant of a graph <em>H</em> is the minimum proportion of copies of <em>H</em> in the complete graph which are monochromatic under an edge-coloring of the complete graph on <em>n</em> vertices as <em>n</em> goes to infinity. A graph <em>H</em> is called <em>r</em>-anti-common if the maximum proportion of rainbow copies of <em>H</em> in any <em>r</em>-coloring of the edges of the complete graph on <em>n</em> vertices is asymptotically achieved by taking a random coloring. We disproved the conjecture that all bipartite graphs are anti-common.</p>
+<p>This research was done at the <a href="https://www.cmu.edu/math/undergrad/suami/home/index.html">Carnegie Mellon University Summer Applied Mathematics Institute (SUAMI)</a></p>
+<ul class='actions'><li><a href="https://ajc.maths.uq.edu.au/pdf/73/ajc_v73_p357.pdf" class="button">PAPER</a></li></ul>
