--- a/website/research/templates/projects/cnn_medical_imaging.j2
+++ b/website/research/templates/projects/cnn_medical_imaging.j2
@@ -1,12 +1,6 @@
-<article>
-    <a class="image"><img src="{{ url_for('static', filename='images/CNN_image.png') }}"
-            alt="Diagram of a convolutional nueral network." /></a>
-    <h3>Applications of CNNs in Medical Imaging</h3>
-    <h4>Student: Sherly<br />Major: Mathematics & Computer Science, Honors Project</h4>
-    <p>A convolutional neural network (CNN) is a deep learning algorithm commonly applied to analyze images.
-        This project
-        will determine parameter estimates for a variety of CNN algorithms and compare their accuracy on medical
-        images of skin cancer.</p>
-    <p>This project is part of the Stan State <a href="https://www.csustan.edu/honors" target="_blank"
-            rel="noreferrer noopener external" alt="(opens in new tab)">Honors</a> program.</p>
-</article>
+<a class='image'><img src="{{ url_for('static', filename='images/CNN_image.png') }}" alt="Diagram of a convolutional nueral network."></a>
+<h2 class='h3'>Applications of CNNs in Medical Imaging</h2>
+<h3 class='h4'>Student: Sherly</h3>
+<h4 class='h5'>Major: Mathematics &amp; Computer Science, Honors Project</h4>
+<p>A convolutional neural network (CNN) is a deep learning algorithm commonly applied to analyze images. This project will determine parameter estimates for a variety of CNN algorithms and compare their accuracy on medical images of skin cancer.</p>
+<p>This project is part of the <a href="https://www.csustan.edu/honors">Stan State Honors program</a>.</p>
