--- a/website/research/templates/projects/hypergraph_image_segmentation.j2
+++ b/website/research/templates/projects/hypergraph_image_segmentation.j2
@@ -1,25 +1,7 @@
-<article>
-    <a class="image"><img src="{{ url_for('static', filename='images/darcyandjuan.png') }}"
-            alt="Abstract image of a circle with overlapping shapes." /></a>
-    <h3>Hypergraph-Based Image Segmentation</h3>
-    <h4>Students: Darcy & Juan<br />Majors: Mathematics</h4>
-    <p>During the summer of 2020, we had the opportunity to participate in the <a
-            href="https://science.osti.gov/wdts/vfp" target="_blank" rel="noreferrer noopener external"
-            alt="(opens in new tab)">Visiting Faculty Program (VFP)</a> at Lawrence Berkeley
-        National Laboratory. During this 10 week program, we worked under <a href="https://tperciano.wixsite.com/home"
-            target="_blank" rel="noreferrer noopener external" alt="(opens in new tab)">Talita Perciano</a> from the
-        Data Analytics and
-        Visualization research group at LBNL. I met Talita when I participated in the <a
-            href="http://shinstitute.org/srp-application/" target="_blank" rel="noreferrer noopener external"
-            alt="(opens in new tab)">Sustainable Research Pathways Workshop</a>. Although
-        a virtual summer research program wasn't ideal, we still had a lot of fun learning about graph theory,
-        image segmentation, and how to code in C++.</p>
-    <p>The following semester, both Darcy and Juan were supported by the Stan State <a
-            href="https://www.csustan.edu/office-research-sponsored-programs/sersca-program" target="_blank"
-            rel="noreferrer noopener external" alt="(opens in new tab)">SERSCA</a> program.
-    </p>
-    <ul class="actions">
-        <li><a href="{{ url_for('research.current_undergrad_abstracts') }}" class="button">Abstract</a>
-        </li>
-    </ul>
-</article>
+<a class='image'><img src="{{ url_for('static', filename='images/darcyandjuan.png') }}" alt="Abstract image of a circle with overlapping shapes."></a>
+<h2 class='h3'>Hypergraph-Based Image Segmentation</h2>
+<h3 class='h4'>Student: Darcy &amp; Juan</h3>
+<h4 class='h5'>Major: Mathematics</h4>
+<p>During the summer of 2020, we had the opportunity to participate in the <a href="https://science.osti.gov/wdts/vfp">Visiting Faculty Program (VFP)</a> at Lawrence Berkeley National Laboratory. During this 10 week program, we worked under <a href="https://tperciano.wixsite.com/home">Talita Perciano</a> from the Data Analytics and Visualization research group at LBNL. I met Talita when I participated in the <a href="http://shinstitute.org/srp-application/">Sustainable Research Pathways Workshop</a>. Although a virtual summer research program wasn't ideal, we still had a lot of fun learning about graph theory, image segmentation, and how to code in C++.</p>
+<p>The following semester, both Darcy and Juan were supported by the <a href="https://www.csustan.edu/office-research-sponsored-programs/sersca-program">Stan State SERSCA program</a>.</p>
+<ul class='actions'><li><a href="{{ url_for('research.current_undergrad_abstracts') }}" class="button">Abstract</a></li></ul>
