--- a/website/research/templates/projects/ev_charging_desert.j2
+++ b/website/research/templates/projects/ev_charging_desert.j2
@@ -1,18 +1,7 @@
-<article>
-    <a class="image"><img src="{{ url_for('static', filename='images/evcharging.jpeg') }}"
-            alt="A power cable connected to an electric vehicle's charging port." /></a>
-    <h3>EV Charging Desert: The Challenges with Electric Vehicle Charging in Stanislaus County</h3>
-    <h4>Student: Delton<br />Major: Computer Science, Honors Project</h4>
-    <p>In 2020, California State Governor Gavin Newsom issued an executive order banning the sale of new
-        internal combustion engine automobiles by 2035. With the rise of fully electric vehicles (EVs) and the
-        impending surge of additional EV sales through 2035, Stanislaus County is severely underprepared for the
-        demands on public EV charging infrastructure. The research project will analyze current and proposed
-        public EV charging infrastructure using electric vehicle ownership data obtained from a recent study
-        completed by the Stanislaus Council of Governments.</p>
-    <p>This project is part of the Stan State <a href="https://www.csustan.edu/honors" target="_blank"
-            rel="noreferrer noopener external" alt="(opens in new tab)">Honors</a> program.</p>
-    <ul class="actions">
-        <li><a href="{{ url_for('research.project', project_name='ev_charging_poster') }}" class="button">POSTER</a>
-        </li>
-    </ul>
-</article>
+<a class='image'><img src="{{ url_for('static', filename='images/evcharging.jpeg') }}" alt="A power cable connected to an electric vehicle's charging port."></a>
+<h2 class='h3'>EV Charging Desert: The Challenges with Electric Vehicle Charging in Stanislaus County</h2>
+<h3 class='h4'>Student: Delton</h3>
+<h4 class='h5'>Major: Computer Science, Honors Project</h4>
+<p>In 2020, California State Governor Gavin Newsom issued an executive order banning the sale of new internal combustion engine automobiles by 2035. With the rise of fully electric vehicles (EVs) and the impending surge of additional EV sales through 2035, Stanislaus County is severely underprepared for the demands on public EV charging infrastructure. The research project will analyze current and proposed public EV charging infrastructure using electric vehicle ownership data obtained from a recent study completed by the Stanislaus Council of Governments.</p>
+<p>This project is part of the <a href="https://www.csustan.edu/honors">Stan State Honors program</a>.</p>
+<ul class='actions'><li><a href="{{ url_for('research.project', project_name='ev_charging_poster') }}" class="button">POSTER</a></li></ul>
