markdown support for research module
## TODO
- update `research.py` current abstract route
- clean up `research.py` comments
- update `test_research.py`
- create module `README`

--- a/website/research/templates/other_research_projects.j2
+++ b/website/research/templates/other_research_projects.j2
@@ -3,7 +3,7 @@
 {% block main_content %}
 <section>
     <header class="major">
-        <h2>Under Construction</h2>
+        <h1 class="h2">Under Construction</h1>
     </header>
 </section>
 {% endblock %}
