--- a/website/research/templates/projects/TEMPLATE.j2
+++ b/website/research/templates/projects/TEMPLATE.j2
@@ -2,7 +2,7 @@
 <h2 class='h3'>...</h2>
 <h3 class='h4'>Advisor: ...</h3>
 <h3 class='h4'>Student: ...</h3>
-<h4 class='h5'>Major: <!-- Add project student(s) major(s) here --></h4>
+<h4 class='h5'>Major: ...</h4>
 <!-- Add project description/abstract here 
 
     NOTE: markdown syntax to create a link is [alt text](url)
