--- a/website/research/templates/abstracts/abstract_mean_shift_clustering.j2
+++ b/website/research/templates/abstracts/abstract_mean_shift_clustering.j2
@@ -1,4 +1,4 @@
-<a class='image'><mg src="{{ url_for('static', filename='images/andrewandjasmin.jpg') }}" alt="HTML file open in a text editor."></a>
+<a class='image'><img src="{{ url_for('static', filename='images/andrewandjasmin.jpg') }}" alt="HTML file open in a text editor."></a>
 <h2 class='h3'>Mean-Shift Clustering in C++</h2>
 <h3 class='h4'>Student: Andrew &amp; Jasmin</h3>
 <h4 class='h5'>Major: Computer Science &amp; Mathematics</h4>
