--- a/website/research/templates/walking_time_poster.j2
+++ b/website/research/templates/walking_time_poster.j2
@@ -1,5 +1,5 @@
 {% extends "layout/base.j2" %}
-{% block title %}Walking Time Poser{% endblock %}
+{% block title %}Walking Time Poster{% endblock %}
 {% block main_content %}
 <section>
     <embed src="{{ url_for('static', filename='images/WalkingTimePoster.pdf') }}" width=100% height=1000px
