--- a/website/research/templates/current_ugrad_projects_abstracts.j2
+++ b/website/research/templates/current_ugrad_projects_abstracts.j2
@@ -1,22 +1,20 @@
 {% extends "layout/base.j2" %}
-{% block title %}Current Undergraduate Projects{% endblock %}
+{% block title %}Current Undergraduate Abstracts{% endblock %}
 {% block main_content %}
 <section>
     <header class="major">
-        <h1 class="h2">Current Undergraduate Projects</h1>
+        <h1 class="h2">Current Undergraduate Abstracts</h1>
     </header>
     <div class="posts">
-        <article>
 
-            {% if project_names %}
-            {% for project in project_names %}
-            <article id="{{ project }}">
-                {% include "abstracts/{}.j2".format(project) %}
-            </article>
-            {% endfor %}
-            {% endif %}
-
+        {% if project_names %}
+        {% for project in project_names %}
+        <article id="{{ project }}">
+            {% include "abstracts/{}.j2".format(project) %}
         </article>
+        {% endfor %}
+        {% endif %}
+
     </div>
 </section>
 {% endblock %}
