events module clean up
Stored JSON data should be in raw markdown format and converted when displayed in the browser.

--- a/website/events/templates/add_event.j2
+++ b/website/events/templates/add_event.j2
@@ -23,16 +23,15 @@
                 <label>Markdown Reference</label>
                 <textarea disabled>**this text is bold**
 *this text is italicized*
-[this is a link](http://example.com)
-&lt;br /&gt; adds a line break</textarea>
+[this is a link](http://example.com)</textarea>
             </div>
             <div class="col-12">
                 <label>Event Name</label>
-                <input type="text" name="event_name" required />
+                <input type="text" name="name" required />
             </div>
             <div class="col-12">
                 <label>Event Description</label>
-                <textarea name="event_description" required></textarea>
+                <textarea name="description" required></textarea>
             </div>
             <div class="col-12">
                 <ul class="actions">
