update events module
ADDED
* Add an `id` property to `events.json` to add some form of "structure" to the JSON.
* Create a `messages.j2` template for flashed messages on the development server.

CHANGED
* Style changes to `events` related pages.
* refactored `event_is_unique` utility function to remove redundant call of `get_events`.

--- a/website/events/templates/upcoming_events.j2
+++ b/website/events/templates/upcoming_events.j2
@@ -3,11 +3,11 @@
 {% block main_content %}
 <section>
     <div class="row gtr-uniform">
-        <header class="major col-6">
+        <header class="major col-9 col-6-small col-12-xsmall">
             <h1 class="h2">Upcoming Events</h1>
         </header>
-        <div class="col-6">
-            <a class="button primary fit" href="{{ url_for('events.add_event') }}">Add Event</a>
+        <div class="col-3 col-6-small col-12-xsmall">
+            <a class="button primary" href="{{ url_for('events.add_event') }}">Add Event</a>
         </div>
     </div>
     {% if data %}
