--- a/website/general/templates/layout/base.j2
+++ b/website/general/templates/layout/base.j2
@@ -32,6 +32,8 @@
                 <div class="inner">
                     {# Page header #}
                     {% include "components/header.j2" %}
+                    {# Messages #}
+                    {% include "components/messages.j2" %}
                     {# Page content #}
                     {% block main_content %} {% endblock %}
                 </div>
