--- a/website/events/templates/upcoming_events.j2
+++ b/website/events/templates/upcoming_events.j2
@@ -21,7 +21,7 @@
                 </tr>
             </thead>
             <tbody>
-                {% for row in data %}
+                {% for row in data | reverse %}
                 <tr>
                     {% for key, value in row.items() %}
                     <td>{{ value }}</td>
@@ -29,11 +29,14 @@
                 </tr>
                 {% endfor %}
             </tbody>
+            {% if updated %}
             <tfoot>
                 <tr>
-                    <td>Updated on May 12, 2021.</td>
+                    <td colspan="2"></td>
+                    <td>Updated on {{ updated }}.</td>
                 </tr>
             </tfoot>
+            {% endif %}
         </table>
     </div>
     {% else %}
