--- a/website/general/templates/components/messages.j2
+++ b/website/general/templates/components/messages.j2
@@ -3,7 +3,7 @@
 <div class="box">
     {%- for category, message in messages %}
     <ul class="contact">
-        {%- if category == info %}
+        {%- if category == "info" %}
         <li class="icon solid fa-info">
             {%- elif category == "success" %}
         <li class="icon solid fa-check">
