update jinja files

--- a/website/general/templates/components/nav.j2
+++ b/website/general/templates/components/nav.j2
@@ -7,7 +7,7 @@
         <li>
             <span class="opener">Events</span>
             <ul>
-                <li><a href="{{ url_for('events.upcoming_events') }}">Upcoming Events</a></li>
+                <li><a href="{{ url_for('events.scheduled_events') }}">Upcoming Events</a></li>
                 <li><a href="{{ url_for('events.past_events') }}">Past Events</a></li>
             </ul>
         </li>
