--- a/website/events/templates/add_event.j2
+++ b/website/events/templates/add_event.j2
@@ -7,31 +7,47 @@
     </header>
     <form method="POST" action="{{ url_for('events.add_event') }}">
         <div class="row gtr-uniform">
-            <div class="col-6 col-12-xsmall">
-                <p class="copyright">Please select the same Start and End Date for same day events.</p>
-                <label>Start Date</label>
-                <input type="date" name="start_date" required />
-                <label>End Date</label>
-                <input type="date" name="end_date" required />
+            <div class="col-12">
+                <p>Please select the same Start and End Date for same day events.</p>
             </div>
             <div class="col-6 col-12-xsmall">
-                <label>Markdown Reference</label>
-                <textarea disabled>**this text is bold**
+                <label>Start Date</label>
+                <i class="icon solid fa-info-circle"></i>
+                Required
+                <input type="date" name="start_date" required />
+            </div>
+            <div class="col-6 col-12-xsmall">
+                <label>End Date</label>
+                <i class="icon solid fa-info-circle"></i>
+                Required
+                <input type="date" name="end_date" required />
+            </div>
+            <div class="col-12">
+                <p>Markdown Reference
+                <pre><code>**this text is bold**
 *this text is italicized*
-[this is a link](http://example.com)</textarea>
+[link text](url)</code></pre>
+                </p>
             </div>
             <div class="col-12">
                 <label>Event Name</label>
-                <input type="text" name="name" required />
+                <i class="icon solid fa-info-circle"></i>
+                Required<br />
+                Markdown is supported.
+                <input type="text" name="name" required placeholder="[Event name with a link](link/to/event)" />
             </div>
             <div class="col-12">
                 <label>Event Description</label>
-                <textarea name="description" required></textarea>
+                <i class="icon solid fa-info-circle"></i>
+                Required<br />
+                Markdown is supported.
+                <textarea name="description" required
+                    placeholder="Some event description with markdown support."></textarea>
             </div>
             <div class="col-12">
                 <ul class="actions">
                     <li><input class="primary" type="submit" value="Add Event" name="add_event" /></li>
-                    <li><a href="{{ url_for('events.upcoming_events') }}" class="button">Cancel</a></li>
+                    <li><a href="{{ url_for('events.scheduled_events') }}" class="button">Cancel</a></li>
                 </ul>
             </div>
         </div>
