--- a/website/events/templates/past_events.j2
+++ b/website/events/templates/past_events.j2
@@ -1,39 +1,43 @@
-{% extends "layout/base.j2" %}
-{% block title %}Past Events{% endblock %}
-{% block main_content %}
+{% extends "layout/base.j2" -%}
+{%- block title %}Past Events{% endblock -%}
+{%- block main_content %}
 <section>
     <header class="major">
         <h1 class="h2">Past Events</h1>
     </header>
-    {% if data %}
+    {%- if data %}
     <div class="table-wrapper">
         <table>
             <thead>
                 <tr>
-                    {% for key, value in data[0].items() %}
+                    {%- for key, value in data[0].items() -%}
+                    {%- if key != 'ID' %}
                     <th>{{ key }}</th>
-                    {% endfor %}
+                    {%- endif -%}
+                    {%- endfor %}
                 </tr>
             </thead>
             <tbody>
-                {% for row in data %}
-                <tr>
-                    {% for key, value in row.items() %}
+                {%- for row in data %}
+                <tr {% if row.ID %}id="{{ row.ID }}" {%- endif %}>
+                    {%- for key, value in row.items() %}
+                    {%- if key != 'ID' %}
                     <td>{{ value }}</td>
-                    {% endfor %}
+                    {%- endif -%}
+                    {%- endfor %}
                 </tr>
-                {% endfor %}
+                {%- endfor %}
             </tbody>
-            {% if updated %}
+            {%- if updated %}
             <tfoot>
                 <tr>
                     <td colspan="2"></td>
                     <td>Updated on {{ updated }}.</td>
                 </tr>
             </tfoot>
-            {% endif %}
+            {%- endif %}
         </table>
     </div>
-    {% endif %}
+    {%- endif %}
 </section>
-{% endblock %}
+{% endblock -%}
