--- a/website/events/templates/scheduled_events.j2
+++ b/website/events/templates/scheduled_events.j2
@@ -1,6 +1,6 @@
-{% extends "layout/base.j2" %}
-{% block title %}Upcoming Events{% endblock %}
-{% block main_content %}
+{% extends "layout/base.j2" -%}
+{%- block title %}Upcoming Events{% endblock -%}
+{%- block main_content %}
 <section>
     <div class="row gtr-uniform">
         <header class="major col-9 col-6-small col-12-xsmall">
@@ -10,39 +10,43 @@
             <a class="button primary" href="{{ url_for('events.add_event') }}">Add Event</a>
         </div>
     </div>
-    {% if data %}
+    {%- if data %}
     <div class="table-wrapper">
         <table>
             <thead>
                 <tr>
-                    {% for key, value in data[0].items() %}
+                    {%- for key, value in data[0].items() -%}
+                    {%- if key != "ID" %}
                     <th>{{ key }}</th>
-                    {% endfor %}
+                    {%- endif -%}
+                    {%- endfor %}
                 </tr>
             </thead>
             <tbody>
-                {% for row in data | reverse %}
-                <tr>
-                    {% for key, value in row.items() %}
+                {%- for row in data | reverse %}
+                <tr {% if row.ID %}id="{{ row.ID }}" {%- endif %}>
+                    {%- for key, value in row.items() %}
+                    {%- if key != "ID" %}
                     <td>{{ value }}</td>
-                    {% endfor %}
+                    {%- endif -%}
+                    {%- endfor %}
                 </tr>
-                {% endfor %}
+                {%- endfor %}
             </tbody>
-            {% if updated %}
+            {%- if updated %}
             <tfoot>
                 <tr>
                     <td colspan="2"></td>
                     <td>Updated on {{ updated }}.</td>
                 </tr>
             </tfoot>
-            {% endif %}
+            {%- endif %}
         </table>
     </div>
-    {% else %}
+    {%- else %}
     <div class="box col-12">
         <p>There are no scheduled events at this time. Please check back soon.</p>
     </div>
-    {% endif %}
+    {%- endif %}
 </section>
-{% endblock %}
+{% endblock -%}
