--- a/website/templates/mentor_groups/math.j2
+++ b/website/templates/mentor_groups/math.j2
@@ -1,6 +1,8 @@
-{% extends "layout/base.j2" %}
-{% block title %}Mentorship Groups in Mathematics{% endblock %}
-{% block main_content %}
+{% extends "base.j2" %}
+
+{% block page_title %}Mentorship Groups in Mathematics{% endblock %}
+
+{% block content %}
 <section>
     <header class="major">
         <h2>Mentorship Programs for Students in Mathematics</h2>
@@ -9,8 +11,7 @@
         <article>
             <span class="icon solid fa-spa"></span>
             <div class="content">
-                <h3><a href="https://www.pacificmathalliance.org/" target="_blank" rel="noreferrer noopener external"
-                        alt="(opens in new tab)">Pacific Math Alliance</a></h3>
+                <h3><a href="https://www.pacificmathalliance.org/">Pacific Math Alliance</a></h3>
                 <p>The PMA is a regional community of mentors who will help underserved students pursue advanced study
                     or a career in the mathematical sciences.</p>
             </div>
@@ -18,8 +19,7 @@
         <article>
             <span class="icon brands fa-slideshare"></span>
             <div class="content">
-                <h3><a href="mathalliance.org" target="_blank" rel="noreferrer noopener external"
-                        alt="(opens in new tab)">National Math Alliance</a></h3>
+                <h3><a href="mathalliance.org">National Math Alliance</a></h3>
                 <p>The National Math Alliance is a community of math sciences faculty and students who want to support
                     underrepresented students in earning a doctoral degree in a mathematical science.</p>
             </div>
@@ -27,8 +27,7 @@
         <article>
             <span class="icon solid fa-hands"></span>
             <div class="content">
-                <h3><a href="https://gradsubgroups.org/" target="_blank" rel="noreferrer noopener external"
-                        alt="(opens in new tab)">subGROUPS</a></h3>
+                <h3><a href="https://gradsubgroups.org/">subGROUPS</a></h3>
                 <p>Small online peer groups of first-year math graduate students that connect students with experiences
                     and identities in common.</p>
             </div>
@@ -36,8 +35,7 @@
         <article>
             <span class="icon solid fa-pencil-alt"></span>
             <div class="content">
-                <h3><a href="https://blogs.ams.org/mathmentoringnetwork/" target="_blank"
-                        rel="noreferrer noopener external" alt="(opens in new tab)">AMS e-Mentoring Network</a></h3>
+                <h3><a href="https://blogs.ams.org/mathmentoringnetwork/">AMS e-Mentoring Network</a></h3>
                 <p>A blog supported by the American Mathematical Society to connect students and mentors in the
                     mathematical sciences.</p>
             </div>
