--- a/website/templates/mentor_groups/stan.j2
+++ b/website/templates/mentor_groups/stan.j2
@@ -1,6 +1,8 @@
-{% extends "layout/base.j2" %}
-{% block title %}Mentorship Groups at Stan State{% endblock %}
-{% block main_content %}
+{% extends "base.j2" %}
+
+{% block page_title %}Mentorship Groups at Stan State{% endblock %}
+
+{% block content %}
 <section>
     <header class="major">
         <h2>Mentorship Programs for Students at Stan State</h2>
@@ -9,8 +11,7 @@
         <article>
             <span class="icon solid fa-rainbow"></span>
             <div class="content">
-                <h3><a href="https://www.csustan.edu/lgbtq-mentorship-program" target="_blank"
-                        rel="noreferrer noopener external" alt="(opens in new tab)">LGBTQ+ Mentorship Program</a></h3>
+                <h3><a href="https://www.csustan.edu/lgbtq-mentorship-program">LGBTQ+ Mentorship Program</a></h3>
                 <p>The mission of the LGBTQ+ Mentorship Program is to assist students in developing positive sexualities
                     and gender identities and expressions by connecting LGBTQ+ students with LGBTQ+ faculty and staff
                     mentors.</p>
@@ -19,8 +20,7 @@
         <article>
             <span class="icon solid fa-users"></span>
             <div class="content">
-                <h3><a href="https://www.csustan.edu/fmp" target="_blank" rel="noreferrer noopener external"
-                        alt="(opens in new tab)">Faculty Mentor Program</a></h3>
+                <h3><a href="https://www.csustan.edu/fmp">Faculty Mentor Program</a></h3>
                 <p>The mission of the Faculty Mentor Program is to encourage faculty-student interaction outside of the
                     classroom through mentoring relationships, which improve academic achievement, increase student
                     retention rates, and improve the graduation rates of educationally disadvantaged students.</p>
@@ -36,8 +36,7 @@
         <article>
             <span class="icon solid fa-utensils"></span>
             <div class="content">
-                <h3><a href="https://www.csustan.edu/basic-needs/" target="_blank" rel="noreferrer noopener external"
-                        alt="(opens in new tab)">Basic Needs</a></h3>
+                <h3><a href="https://www.csustan.edu/basic-needs/">Basic Needs</a></h3>
                 <p>Basic Needs provides valuable resources such as the Warrior Food Pantry and CalFresh that provide
                     relief to students experiencing food insecurity. Although the definition of the term, "basic needs"
                     varies across institutions, the reality is hunger and homelessness now affects all individuals,
@@ -47,8 +46,7 @@
         <article>
             <span class="icon solid fa-hand-holding-heart"></span>
             <div class="content">
-                <h3><a href="https://www.csustan.edu/counseling" target="_blank" rel="noreferrer noopener external"
-                        alt="(opens in new tab)">Psychological Counseling Center</a></h3>
+                <h3><a href="https://www.csustan.edu/counseling">Psychological Counseling Center</a></h3>
                 <p>Students have access to free counseling services at Stan State. The Psychological Counseling Services
                     Team will continue remote services through the Fall 2020 semester. Support is available for our
                     students by telephone. Please call (209) 667-3381 to make an appointment.</p>
