--- a/website/templates/public/about_me.j2
+++ b/website/templates/public/about_me.j2
@@ -1,6 +1,8 @@
-{% extends "layout/base.j2" %}
-{% block title %}About Me{% endblock %}
-{% block main_content %}
+{% extends "base.j2" %}
+
+{% block page_title %}About Me{% endblock %}
+
+{% block content %}
 <section>
     <header class="main">
         <h2>About Me</h2>
@@ -12,23 +14,20 @@
                 have always enjoyed working out and watching YouTube. Sometimes those interests go hand-in-hand as I
                 following many bodybuilding YouTubers--I very much admire their dedication to the sport! Now that we
                 have moved back to California and I have a life-sized kitchen, I started cooking quite a bit using
-                recipes from <a href="seriouseats.com" target="_blank" rel="noreferrer noopener external"
-                    alt="(opens in new tab)">Serious Eats</a> and the <a href="https://cooking.nytimes.com/"
-                    target="_blank" rel="noreferrer noopener external" alt="(opens in new tab)">New York Times</a>.
-                Since quarantine started, my partner <a href="https://www.linkedin.com/in/paulo-s-costa/"
-                    target="_blank" rel="noreferrer noopener external" alt="(opens in new tab)">Paulo</a> moved back to
-                Turlock from the Bay Area to work from home. He's been my cooking partner and...let's just say thank
-                goodness because he is somehow immune to the tears caused by cutting onions! We love to hike together
-                and even went on our first backpacking trip with our "quarantine pod" in Summer 2020 at <a
-                    href="https://www.google.com/maps/place/Wrights+Lake,+California+95720/data=!4m2!3m1!1s0x809a2666298d4375:0xa7fd0e17c11425da?sa=X&ved=2ahUKEwiFlN6fn-rsAhVtHjQIHYCUAYoQ8gEwH3oECCoQAQ"
-                    target="_blank" rel="noreferrer noopener external" alt="(opens in new tab)">Wrights Lake</a>
+                recipes from <a href="seriouseats.com">Serious Eats</a> and the <a
+                    href="https://cooking.nytimes.com/">New York Times</a>.
+                Since quarantine started, my partner <a href="https://www.linkedin.com/in/paulo-s-costa/">Paulo</a>
+                moved back to Turlock from the Bay Area to work from home. He's been my cooking partner and...let's just
+                say thank goodness because he is somehow immune to the tears caused by cutting onions! We love to hike
+                together and even went on our first backpacking trip with our "quarantine pod" in Summer 2020 at <a
+                    href="https://www.google.com/maps/place/Wrights+Lake,+California+95720/data=!4m2!3m1!1s0x809a2666298d4375:0xa7fd0e17c11425da?sa=X&ved=2ahUKEwiFlN6fn-rsAhVtHjQIHYCUAYoQ8gEwH3oECCoQAQ">Wrights
+                    Lake</a>
                 (picture on the right).
             </p>
             <p>Paulo grew up in Turlock, so we enjoy seeing our families every weekend. Both of our parents have
                 Portuguese roots, specifically from the group of islands off the coast of Portugal called the <a
-                    href="https://en.wikipedia.org/wiki/Azores" target="_blank" rel="noreferrer noopener external"
-                    alt="(opens in new tab)">Azores</a>. I hope to take a trip there for the first time after the
-                pandemic!
+                    href="https://en.wikipedia.org/wiki/Azores">Azores</a>. I hope to take a trip there for the first
+                time after the pandemic!
             </p>
         </div>
         <div class="col-6 col-12-small">
