--- a/website/templates/public/student_news.j2
+++ b/website/templates/public/student_news.j2
@@ -1,6 +1,8 @@
-{% extends "layout/base.j2" %}
-{% block title %}Student News{% endblock %}
-{% block main_content %}
+{% extends "base.j2" %}
+
+{% block page_title %}Student News{% endblock %}
+
+{% block content %}
 <section>
     <header class="major">
         <h2>Student News</h2>
