--- a/website/templates/header.j2
+++ b/website/templates/header.j2
@@ -1,6 +1,6 @@
 <header id="header">
-    <a href="{{ url_for('main.home') }}" class="logo"><strong>Dr. Jessica De
-            Silva</strong> California State University, Stanislaus</a>
+    <a href="{{ url_for('public.home') }}" class="logo"><strong>Dr. Jessica De Silva</strong> California State
+        University, Stanislaus</a>
     <ul class="icons">
         <li><img src="{{ url_for('static', filename='images/stanlogo.png') }}" width="10%"
                 alt="California State University, Stanislaus shield logo." /></li>
