--- a/website/templates/public/desilva_cv.j2
+++ b/website/templates/public/desilva_cv.j2
@@ -1,6 +1,8 @@
-{% extends "layout/base.j2" %}
-{% block title %}Jessica De Silva's CV{% endblock %}
-{% block main_content %}
+{% extends "base.j2" %}
+
+{% block page_title %}Jessica De Silva's CV{% endblock %}
+
+{% block content %}
 <section>
     <embed src="{{ url_for('static', filename='images/DeSilvaCV.pdf') }}" width=100% height=1000px alt="(PDF file)">
 </section>
