--- a/website/templates/sidebar.j2
+++ b/website/templates/sidebar.j2
@@ -1,7 +1,8 @@
 <div id="sidebar">
     <div class="inner">
-        {# Menu #}
-        {% include "components/nav.j2" %}
+
+        {% include "nav.j2" %}
+
         <!-- Section -->
         <section>
             <header class="major">
@@ -13,7 +14,8 @@
                 </li>
             </ul>
         </section>
-        {# Footer #}
-        {% include "components/footer.j2" %}
+
+        {% include "footer.j2" %}
+
     </div>
 </div>
