normalize image names & update upload folder

--- a/website/templates/public/desilva_cv.j2
+++ b/website/templates/public/desilva_cv.j2
@@ -4,6 +4,6 @@
 
 {% block content %}
 <section>
-    <embed src="{{ url_for('static', filename='images/DeSilvaCV.pdf') }}" width=100% height=1000px alt="(PDF file)">
+    <embed src="{{ url_for('static', filename='documents/DeSilvaCV.pdf') }}" width=100% height=1000px alt="(PDF file)">
 </section>
 {% endblock %}
