--- a/website/templates/public/home.j2
+++ b/website/templates/public/home.j2
@@ -38,7 +38,7 @@
         </ul>
     </div>
     <span class="image object">
-        <img src="{{ url_for('static', filename='images/ProfilePicture.jpg') }}"
+        <img src="{{ url_for('static', filename='images/profile_pic_lake.jpg') }}"
             alt="Dr. Jessica De Silva standing in front of the Reflecting Pond at Stan State." />
     </span>
 </section>
