--- a/website/templates/header.j2
+++ b/website/templates/header.j2
@@ -2,7 +2,7 @@
     <a href="{{ url_for('public.home') }}" class="logo"><strong>Dr. Jessica De Silva</strong> California State
         University, Stanislaus</a>
     <ul class="icons">
-        <li><img src="{{ url_for('static', filename='images/stanlogo.png') }}" width="10%"
+        <li><img src="{{ url_for('static', filename='images/stan_logo.png') }}" width="10%"
                 alt="California State University, Stanislaus shield logo." /></li>
     </ul>
 </header>
