--- a/website/templates/public/about_me.j2
+++ b/website/templates/public/about_me.j2
@@ -1,8 +1,8 @@
-{% extends "base.j2" %}
+{%- extends "base.j2" -%}
 
-{% block page_title %}About Me{% endblock %}
+{%- block page_title -%}About Me{%- endblock -%}
 
-{% block content %}
+{%- block content -%}
 <section>
     <header class="main">
         <h2>About Me</h2>
@@ -104,4 +104,4 @@
         them.
     </p>
 </section>
-{% endblock %}
+{%- endblock -%}
