--- a/website/templates/public/home.j2
+++ b/website/templates/public/home.j2
@@ -1,8 +1,8 @@
-{% extends "base.j2" %}
+{%- extends "base.j2" -%}
 
-{% block page_title %}Jessica De Silva's Homepage{% endblock %}
+{%- block page_title -%}Jessica De Silva's Homepage{%- endblock -%}
 
-{% block content %}
+{%- block content -%}
 <!-- Banner -->
 <section id="banner">
     <div class="content">
@@ -42,4 +42,4 @@
             alt="Dr. Jessica De Silva standing in front of the Reflecting Pond at Stan State." />
     </span>
 </section>
-{% endblock %}
+{%- endblock -%}
