--- a/website/templates/public/student_news.j2
+++ b/website/templates/public/student_news.j2
@@ -1,8 +1,8 @@
-{% extends "base.j2" %}
+{%- extends "base.j2" -%}
 
-{% block page_title %}Student News{% endblock %}
+{%- block page_title -%}Student News{%- endblock -%}
 
-{% block content %}
+{%- block content -%}
 <section>
     <header class="major">
         <h2>Student News</h2>
@@ -248,4 +248,4 @@
         </div>
     </div>
 </section>
-{% endblock %}
+{%- endblock -%}
