--- a/website/templates/sidebar.j2
+++ b/website/templates/sidebar.j2
@@ -1,7 +1,7 @@
 <div id="sidebar">
     <div class="inner">
 
-        {% include "nav.j2" %}
+        {%- include "nav.j2" -%}
 
         <!-- Section -->
         <section>
@@ -15,7 +15,7 @@
             </ul>
         </section>
 
-        {% include "footer.j2" %}
+        {%- include "footer.j2" -%}
 
     </div>
 </div>
