--- a/website/templates/events/add_event.j2
+++ b/website/templates/events/add_event.j2
@@ -1,10 +1,10 @@
-{% extends "base.j2" %}
+{%- extends "base.j2" -%}
 
-{% from "_formhelper.j2" import render_field %}
+{%- from "_formhelper.j2" import render_field -%}
 
-{% block page_title %}Add Event{% endblock %}
+{%- block page_title -%}Add Event{%- endblock -%}
 
-{% block content %}
+{%- block content -%}
 <section>
     <header class="major">
         <h1 class="h2">Add New Event</h1>
@@ -35,20 +35,20 @@
         </div>
     </form>
 </section>
-{% endblock %}
+{%- endblock -%}
 {#
 NOTE: Plugins will not be removed if their required dependencies are not removed as well.
 indent -> indentlist -> list
 #}
-{% set simple_text_config = "removePlugins: [
+{%- set simple_text_config = "removePlugins: [
 'about','clipboard','editortoolbar','floatingspace','indent','indentlist','list',
 'notification','spellchecker','uibutton','undo'
 ],
 toolbar: [
 { name: 'basicstyles', items: [ 'Bold', 'Italic' ] },
-{ name: 'links', items: [ 'Link', 'Unlink' ] }]" %}
-{% block js %}
+{ name: 'links', items: [ 'Link', 'Unlink' ] }]" -%}
+{%- block js -%}
 {{ ckeditor.load(custom_url=url_for("static", filename="ckeditor/basic/ckeditor.js")) }}
 {{ ckeditor.config(name="name", height=60, custom_config=simple_text_config) }}
 {{ ckeditor.config(name="description", custom_config=simple_text_config) }}
-{% endblock %}
+{%- endblock -%}
