--- a/website/templates/events/future_events.j2
+++ b/website/templates/events/future_events.j2
@@ -1,41 +1,42 @@
-{% extends "base.j2" %}
+{%- extends "base.j2" -%}
 
-{% block page_title %}Scheduled Events{% endblock %}
+{%- block page_title -%}Scheduled Events{%- endblock -%}
 
-{% block content %}
+{%- block content -%}
 <section>
-    <header {% if debug %} class="row" {% else %} class="major" {% endif %}>
-        <h1 {% if debug %} class="h2 col-9 col-6-small col-12-xsmall" {% else %} class="h2" {% endif %}>Scheduled Events
+    <header {% if debug -%} class="row" {% else -%} class="major" {%- endif -%}>
+        <h1 {% if debug -%} class="h2 col-9 col-6-small col-12-xsmall" {% else -%} class="h2" {%- endif -%}>Scheduled
+            Events
         </h1>
-        {% if debug %}
+        {%- if debug -%}
         <div class="col-3 col-6-small col-12-xsmall">
             <ul class="actions stacked col-3 col-6-small col-12-xsmall">
                 <li><a class="button primary fit" href="{{ url_for('events.add_event') }}">Add Event</a></li>
             </ul>
         </div>
-        {% endif %}
+        {%- endif -%}
     </header>
-    {% if data %}
+    {%- if data -%}
     <div class="table-wrapper">
         <table>
             <thead>
                 <tr>
-                    {% for key, value in data[0].items() %}
-                    {% if key != "ID" %}
+                    {%- for key, value in data[0].items() -%}
+                    {%- if key != "ID" -%}
                     <th>{{ key }}</th>
-                    {% endif %}
-                    {% endfor %}
+                    {%- endif -%}
+                    {%- endfor -%}
                 </tr>
             </thead>
             <tbody>
-                {% for row in data | reverse %}
-                <tr {% if row.ID %}id="{{ row.ID }}" {% endif %}>
-                    {% for key, value in row.items() %}
-                    {% if key != "ID" %}
+                {%- for row in data | reverse -%}
+                <tr {% if row.ID -%}id="{{ row.ID }}" {%- endif -%}>
+                    {%- for key, value in row.items() -%}
+                    {%- if key != "ID" -%}
                     <td>{{ value }}</td>
-                    {% endif %}
-                    {% endfor %}
-                    {% if debug %}
+                    {%- endif -%}
+                    {%- endfor -%}
+                    {%- if debug -%}
                     <td>
                         <ul class="actions special">
                             <li><a class="solid icon fa-pen button small"
@@ -44,16 +45,16 @@
                                     href="{{ url_for('events.delete_event', event_id=row.ID) }}">Delete</a></li>
                         </ul>
                     </td>
-                    {% endif %}
+                    {%- endif -%}
                 </tr>
-                {% endfor %}
+                {%- endfor -%}
             </tbody>
         </table>
     </div>
-    {% else %}
+    {%- else -%}
     <div class="box col-12">
         <p>There are no scheduled events at this time. Please check back soon.</p>
     </div>
-    {% endif %}
+    {%- endif -%}
 </section>
-{% endblock -%}
+{%- endblock -%}
