--- a/website/templates/events/past_events.j2
+++ b/website/templates/events/past_events.j2
@@ -1,33 +1,33 @@
-{% extends "base.j2" %}
+{%- extends "base.j2" -%}
 
-{% block page_title %}Past Events{% endblock %}
+{%- block page_title -%}Past Events{%- endblock -%}
 
-{% block content %}
+{%- block content -%}
 <section>
     <header class="major">
         <h1 class="h2">Past Events</h1>
     </header>
-    {% if data %}
+    {%- if data -%}
     <div class="table-wrapper">
         <table>
             <thead>
                 <tr>
-                    {% for key, value in data[0].items() %}
-                    {% if key != "ID" %}
+                    {%- for key, value in data[0].items() -%}
+                    {%- if key != "ID" -%}
                     <th>{{ key }}</th>
-                    {% endif %}
-                    {% endfor %}
+                    {%- endif -%}
+                    {%- endfor -%}
                 </tr>
             </thead>
             <tbody>
-                {%- for row in data %}
-                <tr {% if row.ID %}id="{{ row.ID }}" {% endif %}>
-                    {% for key, value in row.items() %}
-                    {% if key != "ID" %}
+                {%- for row in data -%}
+                <tr {% if row.ID -%} id="{{ row.ID }}" {%- endif -%}>
+                    {%- for key, value in row.items() -%}
+                    {%- if key != "ID" -%}
                     <td>{{ value }}</td>
-                    {% endif %}
-                    {% endfor %}
-                    {% if debug %}
+                    {%- endif -%}
+                    {%- endfor -%}
+                    {%- if debug -%}
                     <td>
                         <ul class="actions special">
                             <li><a class="solid icon fa-pen button small"
@@ -36,12 +36,12 @@
                                     href="{{ url_for('events.delete_event', event_id=row.ID) }}">Delete</a></li>
                         </ul>
                     </td>
-                    {% endif %}
+                    {%- endif -%}
                 </tr>
-                {% endfor %}
+                {%- endfor -%}
             </tbody>
         </table>
     </div>
-    {% endif %}
+    {%- endif -%}
 </section>
-{% endblock %}
+{%- endblock -%}
