--- a/website/templates/mentor_groups/math.j2
+++ b/website/templates/mentor_groups/math.j2
@@ -1,8 +1,8 @@
-{% extends "base.j2" %}
+{%- extends "base.j2" -%}
 
-{% block page_title %}Mentorship Groups in Mathematics{% endblock %}
+{%- block page_title -%}Mentorship Groups in Mathematics{%- endblock -%}
 
-{% block content %}
+{%- block content -%}
 <section>
     <header class="major">
         <h2>Mentorship Programs for Students in Mathematics</h2>
@@ -42,4 +42,4 @@
         </article>
     </div>
 </section>
-{% endblock %}
+{%- endblock -%}
