--- a/website/templates/mentor_groups/stan.j2
+++ b/website/templates/mentor_groups/stan.j2
@@ -1,8 +1,8 @@
-{% extends "base.j2" %}
+{%- extends "base.j2" -%}
 
-{% block page_title %}Mentorship Groups at Stan State{% endblock %}
+{%- block page_title -%}Mentorship Groups at Stan State{%- endblock -%}
 
-{% block content %}
+{%- block content -%}
 <section>
     <header class="major">
         <h2>Mentorship Programs for Students at Stan State</h2>
@@ -54,4 +54,4 @@
         </article>
     </div>
 </section>
-{% endblock %}
+{%- endblock -%}
