--- a/website/templates/messages.j2
+++ b/website/templates/messages.j2
@@ -1,23 +1,23 @@
-{% with messages = get_flashed_messages(with_categories=true) %}
-{% if messages %}
+{%- with messages = get_flashed_messages(with_categories=true) -%}
+{%- if messages -%}
 <div class="box">
-    {% for category, message in messages %}
+    {%- for category, message in messages -%}
     <ul class="contact">
-        {% if category == "info" %}
+        {%- if category == "info" -%}
         <li class="icon solid fa-info">
-        {% elif category == "success" %}
+            {%- elif category == "success" -%}
         <li class="icon solid fa-check">
-        {% elif category == "warning" %}
+            {%- elif category == "warning" -%}
         <li class="icon solid fa-exclamation">
-        {% elif category == "question" %}
+            {%- elif category == "question" -%}
         <li class="icon solid fa-question">
-        {% elif category == "error" %}
+            {%- elif category == "error" -%}
         <li class="icon solid fa-times">
-        {% endif %}
+            {%- endif -%}
             {{ message }}
         </li>
     </ul>
-    {% endfor %}
+    {%- endfor -%}
 </div>
-{% endif %}
-{% endwith %}
+{%- endif -%}
+{%- endwith -%}
