update research module

--- a/website/templates/nav.j2
+++ b/website/templates/nav.j2
@@ -15,10 +15,10 @@
         <li>
             <span class="opener">Research</span>
             <ul>
-                {#<li><a href="{{ url_for('research.current_undergrad_projects') }}">Current Undergraduate Projects</a>
+                <li><a href="{{ url_for('research.current_undergrad_projects') }}">Current Undergraduate Projects</a>
                 </li>
                 <li><a href="{{ url_for('research.former_undergrad_projects') }}">Former Undergraduate Projects</a></li>
-                <li><a href="{{ url_for('research.other_research_projects') }}">Other Projects</a></li>#}
+                <li><a href="{{ url_for('research.other_projects') }}">Other Projects</a></li>
             </ul>
         </li>
         <li>
