--- a/website/templates/events/delete_event.j2
+++ b/website/templates/events/delete_event.j2
@@ -1,6 +1,6 @@
 {%- extends "base.j2" -%}
 
-{%- from "_formhelper.j2" import render_field -%}
+{%- from "macros/_formhelper.j2" import render_field -%}
 
 {%- block page_title -%}Delete Event{%- endblock -%}
 
