--- a/website/templates/research/other_projects.j2
+++ b/website/templates/research/other_projects.j2
@@ -21,7 +21,7 @@
     </div>
     {%- else -%}
     <div class="box col-12">
-        <p>There are no former undergraduate projects. Please check back soon.</p>
+        <p>This page is currently under construction. Please check back soon.</p>
     </div>
     {%- endif -%}
 </section>
